feat : some thing added

--- a/gui/learn_tkinter.ipynb
+++ b/gui/learn_tkinter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,6 +103,96 @@
     "button.pack()\n",
     "\n",
     "root.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Radio Button"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "root = Tk()\n",
+    "root.title(\"Radio Button\")\n",
+    "\n",
+    "player = StringVar()\n",
+    "player.set(\"CSK\")\n",
+    "\n",
+    "Radiobutton(root, text=\"Virat\", variable=player, value=\"RCB\").pack()\n",
+    "Radiobutton(root,text=\"Dhoni\",variable=player,value=\"CSK\").pack()\n",
+    "\n",
+    "def click():\n",
+    "    Label(root,text=player.get()).pack()\n",
+    "    return\n",
+    "\n",
+    "Button(root,text=\"Click me\",command=click).pack()\n",
+    "\n",
+    "root.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "root = Tk()\n",
+    "root.title(\"Radio Button\")\n",
+    "\n",
+    "player = StringVar()\n",
+    "player.set(\"CSK\")\n",
+    "\n",
+    "playermap = [\n",
+    "    (\"Virat\",\"RCB\"),\n",
+    "    (\"Dhoni\",\"CSK\"),\n",
+    "    (\"Rohit\",\"MI\")\n",
+    "]\n",
+    "\n",
+    "for name,team in playermap:\n",
+    "    Radiobutton(root,text=name,variable=player,value=team).pack()\n",
+    "\n",
+    "def click():\n",
+    "    Label(root,text=player.get()).pack()\n",
+    "    return\n",
+    "\n",
+    "Button(root,text=\"Click me\",command=click).pack()\n",
+    "\n",
+    "root.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello! \n",
+      "\n",
+      "How can I help you today? \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from google.generativeai import GenerativeModel , configure\n",
+    "\n",
+    "configure(api_key=\"AIzaSyDdp_p1cq6fb-FrF96VJodhSUDe4PJbzNM\")\n",
+    "\n",
+    "model = GenerativeModel(\"gemini-1.5-pro\")\n",
+    "\n",
+    "que = input(\"Enter the question\")\n",
+    "r = model.generate_content(que)\n",
+    "\n",
+    "print(r.text)"
    ]
   }
  ],
