--- a/jupyter/learn1_numpy.ipynb
+++ b/jupyter/learn1_numpy.ipynb
@@ -274,6 +274,109 @@
     "a = np.eye(4)\n",
     "print(a)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[51 52 52 81]\n",
+      " [67 92 40 71]]\n",
+      "[10 15 20 25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.random.randint(10,100,(2,4))\n",
+    "print(x)\n",
+    "y =np.arange(10,30,5)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [1,2,3,4,5]\n",
+    "np_array = np.asarray(l)\n",
+    "print(np_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[49 20 81]\n",
+      " [41 13 55]]\n",
+      "[[63 59 96]\n",
+      " [35 15 75]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.random.randint(10,100,(2,3))\n",
+    "b = np.random.randint(10,100,(2,3))\n",
+    "\n",
+    "print(a)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[112  76]\n",
+      " [ 79  28]\n",
+      " [177 130]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "c =a+b\n",
+    "print(c.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[112  79 177]\n",
+      " [ 76  28 130]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(c.reshape(2,3))"
+   ]
   }
  ],
  "metadata": {
