--- a/jupyter/learn5_kaggleAPI.ipynb
+++ b/jupyter/learn5_kaggleAPI.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "pip install kaggle"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
